--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -184,14 +184,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-13 07:09:29,676 - __main__ - INFO - Reading dataset from ../data/raw_dataset\n"
+      "2024-04-13 08:15:37,175 - __main__ - INFO - Reading dataset from ../data/raw_dataset\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-13 08:22:32,948 - __main__ - INFO - Write yolov8 dataset to ../data/garbage_dataset\n"
      ]
     }
    ],
@@ -260,6 +267,12 @@
     "        f.write(']')\n",
     "    logger.info(f'Write yolov8 dataset to {dataset_folder}')\n",
     "\n",
+    "    # zip dataset folder\n",
+    "    # remove old zip file\n",
+    "    zip_file = '../data/garbage_dataset.zip'\n",
+    "    if os.path.exists(zip_file):\n",
+    "        os.remove(zip_file)\n",
+    "    shutil.make_archive(dataset_folder, 'zip', dataset_folder)\n",
     "raw_folder = '../data/raw_dataset'\n",
     "raw_dataset = read_dataset(raw_folder)\n",
     "\n",
